// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cut extension - plugin Options: directiveSyntax should render both cuts 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Old cut
  </summary>
  <div class="yfm-cut-content">
    <p>
      Old cut content
    </p>
  </div>
</details>
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Directive cut
  </summary>
  <div class="yfm-cut-content">
    <p>
      Directive cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin Options: directiveSyntax should render only new (directive) cut 1`] = `
<p>
</p>
<p>
  Old cut content
</p>
<p>
</p>
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Directive cut
  </summary>
  <div class="yfm-cut-content">
    <p>
      Directive cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin Options: directiveSyntax should render only old (curly) cut 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Old cut
  </summary>
  <div class="yfm-cut-content">
    <p>
      Old cut content
    </p>
  </div>
</details>
<p>
  :::cut[Directive cut]
  <br>
  Directive cut content
  <br>
  :::
</p>
`;

exports[`Cut extension - plugin curly syntax should close all tags correctly and insert two p tags 1`] = `
<ul>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 1
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
</ul>
`;

exports[`Cut extension - plugin curly syntax should close all tags correctly when given a bullet-list with several items 1`] = `
<ul>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 1
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 2
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
  <li>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Cut 3
      </summary>
      <div class="yfm-cut-content">
        <p>
          Some text
        </p>
      </div>
    </details>
  </li>
</ul>
`;

exports[`Cut extension - plugin curly syntax should parse markup with cut to token stream 1`] = `
[
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut",
      ],
    ],
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      2,
      3,
    ],
    "markup": "{%",
    "meta": null,
    "nesting": 1,
    "tag": "details",
    "type": "yfm_cut_open",
  },
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut-title",
      ],
    ],
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "summary",
    "type": "yfm_cut_title_open",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Cut ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "title",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
    ],
    "content": "Cut _title_",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      0,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "summary",
    "type": "yfm_cut_title_close",
  },
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut-content",
      ],
    ],
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "yfm_cut_content_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Cut content",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "Cut content",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      4,
      5,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "yfm_cut_content_close",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      6,
      7,
    ],
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "details",
    "type": "yfm_cut_close",
  },
]
`;

exports[`Cut extension - plugin curly syntax should render nested cuts 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Outer title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Outer content
    </p>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Inner title
      </summary>
      <div class="yfm-cut-content">
        <p>
          Inner content
        </p>
      </div>
    </details>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render siblings cuts 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title 1
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content 1
    </p>
  </div>
</details>
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title 2
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content 2
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render simple cut 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render simple cut with code in it 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title
  </summary>
  <div class="yfm-cut-content">
    <pre>
      <code class="hljs">
        Code
      </code>
    </pre>
  </div>
</details>
`;

exports[`Cut extension - plugin curly syntax should render title with format 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    <strong>
      Strong cut title
    </strong>
  </summary>
  <div class="yfm-cut-content">
    <p>
      Content we want to hide
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin directive syntax should not render leaf cut 1`] = `
<p>
  ::cut[Title]
</p>
`;

exports[`Cut extension - plugin directive syntax should parse markup with cut to token stream 1`] = `
[
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": [
      2,
      5,
    ],
    "markup": ":::cut",
    "meta": null,
    "nesting": 1,
    "tag": "details",
    "type": "yfm_cut_open",
  },
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut-title",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "summary",
    "type": "yfm_cut_title_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Cut ",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": 1,
        "tag": "em",
        "type": "em_open",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "title",
        "hidden": false,
        "info": "",
        "level": 1,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "_",
        "meta": null,
        "nesting": -1,
        "tag": "em",
        "type": "em_close",
      },
    ],
    "content": "Cut _title_",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "summary",
    "type": "yfm_cut_title_close",
  },
  Token {
    "attrs": [
      [
        "class",
        "yfm-cut-content",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "yfm_cut_content_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "paragraph_open",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "Cut content",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "Cut content",
    "hidden": false,
    "info": "",
    "level": 3,
    "map": [
      3,
      4,
    ],
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 2,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "paragraph_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 1,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "yfm_cut_content_close",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "details",
    "type": "yfm_cut_close",
  },
]
`;

exports[`Cut extension - plugin directive syntax should render cut with empty title 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin directive syntax should render cut with inline markup in title 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    <strong>
      Strong cut title
    </strong>
  </summary>
  <div class="yfm-cut-content">
    <p>
      Content we want to hide
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin directive syntax should render directive cut 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Cut title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Cut content
    </p>
  </div>
</details>
`;

exports[`Cut extension - plugin directive syntax should render nested cut 1`] = `
<details class="yfm-cut">
  <summary class="yfm-cut-title">
    Outer title
  </summary>
  <div class="yfm-cut-content">
    <p>
      Outer content
    </p>
    <details class="yfm-cut">
      <summary class="yfm-cut-title">
        Inner title
      </summary>
      <div class="yfm-cut-content">
        <p>
          Inner content
        </p>
      </div>
    </details>
  </div>
</details>
`;
